# Mandelbrot-set-GPU

./: CMakeLists.txt  README.md  build.sh  imgui.ini  ref.bib  report.aux  report.out  run.sh
include/: MandelbrotSet.cuh  MandelbrotSet.h  cuda_array.cuh  defines.h  utils.h
opengl/: CMakeLists.txt
report/: report.bbl  report.blg  report.tex
src/: MandelbrotSet.cpp  MandelbrotSet.cu  main.cpp  main.cu  test.py  uitls.cpp
